--- a/portfolio.css
+++ b/portfolio.css
@@ -2,13 +2,12 @@ body{
     margin:0;
     background-image: url(./img/background.jpg);
     background-size: cover;
-    width:100%;
 }
 /* logo + rotation */
 .header{
     display: flex;
     justify-content: space-around;
-    width:100vw;
+   
 }
 .texte{
     width:100%;
@@ -61,21 +60,17 @@ body{
     animation: rotating 5s linear infinite;
 }
 /* Fin logo */
-.tagrossetete {
-    background-color: pink;
-    font-size: xx-large;
-}
+
 /*boutton */
 .bouttonPosition{
     margin-top: 150px;
-    display: flex;
-    justify-self: flex-start;
+    
 }
 .bouttonStyle{
     background-color: #061622;
-    padding:25px 60px;
     box-shadow: 0 6px white;
     font-family: monospace;
+    padding: 10px 30px;
     border-radius: 20px;
     color: white;
     outline: none;
@@ -91,10 +86,7 @@ body{
     box-shadow: 0 0 white;
     top: 6px;
 }
-#btnProjets{
-    padding: 34px 65px;
-   
-}
+
 /* Fin boutton */
 
 /* Texte */
@@ -109,8 +101,7 @@ body{
     color: white;
     margin-left: 4%;
     font-size: x-large;
-    font-family:monospace;
-   
+    font-family:monospace;  
 }
 #comp{
   color: white;
@@ -129,23 +120,52 @@ body{
     padding-top: 2%;
 }
 /*fin LOGO COMP */
+
+/* PARTIE CONTACT */
 .paragraph3{
     display: flex;
-    margin-top: 5%;
-    width: auto;
-    align-items: center;
-    
-  
+    margin-top: 4%;
+    align-items: center;    
 }
 .contact{
+    margin-left: 4%;
+    column-gap: 2%;
+    text-decoration: none;  
+}
+.contactlogo{
+    color: white;
+    font-size: x-large;
+    font-family:monospace;
+    margin-left: 2%;
+    text-decoration: none;
+}
+.lala{
     display: flex;
-    align-items: center;
-    
 }
-/*cube*/
-canvas {
-    display: block;
-    margin:0;
-    align-self: center;
-    margin-right: 1%;
+.textalign{
+    color: white;
 }
+/* FIN CONTACT */
+
+/* PAGE PROJET */
+.card-container {
+    background: #34495e;
+    border-radius: 20px;
+    display: flex;
+    max-width: 600px;
+    box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.1); 
+    border-bottom: 6px solid #2c3e50;
+    border-right: 6px solid #2c3e50;
+  }
+  .placement{
+      display: flex;
+      justify-content:space-evenly;
+      align-items: center;
+      margin:3%;
+      
+  }
+ 
+
+
+
+  
