--- a/portfolio.css
+++ b/portfolio.css
@@ -148,23 +148,54 @@ body{
 /* FIN CONTACT */
 
 /* PAGE PROJET */
-.card-container {
-    background: #34495e;
-    border-radius: 20px;
+.placement{
     display: flex;
-    max-width: 600px;
-    box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.1); 
-    border-bottom: 6px solid #2c3e50;
-    border-right: 6px solid #2c3e50;
-  }
-  .placement{
-      display: flex;
-      justify-content:space-evenly;
-      align-items: center;
-      margin:3%;
-      
-  }
- 
+    justify-content: space-around;
+    margin-top: 8%;
+}
+
+
+ .carte{
+    width: 400px;
+    height: 260px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+ }
+ #bordure{
+     border: solid 3px #061622;
+ }
+ .carte2{
+    width: 400px;
+    height: 260px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+ }
+ #bordure2{
+    border: solid 3px #061622;
+ }
+ .carte3{
+    width: 400px;
+    height: 260px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+ }
+ .carte4{
+    width: 400px;
+    height: 260px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+ }
+ .deco {
+     text-decoration: none;
+ }
 
 
 
